Revision history for {{ $dist->name }}:

{{$NEXT}}
  [Tests]
  - Switched package used for the release manifest.

  [Toolchain]
  - Fixed an error with the MANIFEST and remove files from the distribution.

  - Removed use of Generate::ManifestSkip plugin. It is now maintained manually.

v0.2.1    2023-06-19 09:40:45+01:00 Europe/London
  [Bug Fixes]
  - Re-added the file existence check that was removed in v0.1.3.

  [Tests]
  - Fixed an issue with locale-specific error messages.

v0.2.0    2023-06-15 19:31:17+01:00 Europe/London
  [Enhancements]
  - Improved error handling when opening a file.

  - The file opening error message includes the module path and line number where it failed.

v0.1.6    2023-06-14 15:38:12+01:00 Europe/London
  [Documentation]
  - Added a SECURITY section.

  [Tests]
  - Added required module for tests to work around broken CPAN Testers environments.

v0.1.5    2023-06-09 09:59:02+01:00 Europe/London
  [Documentation]
  - Fixed a silly typo in the DESCRIPTION.

v0.1.4    2023-06-09 09:40:30+01:00 Europe/London
  [Documentation]
  - Fixed typo in Changes for v0.1.3.

  [Tests]
  - Added tests with Plack::Middleware::ConditionalGET.

  - Added more diagnostics.

  - Test canonical filenames.

v0.1.3    2023-06-08 15:35:31+01:00 Europe/London
  [Enhancements]
  - Include the system error when the file cannot be opened (thanks @barubary@infosec.exchange).

  [Bug Fixes]
  - Fixed another place where absolute path was not used.

  - Removed useless check for file existence (thanks @barubary@infosec.exchange).

  - Stat the open filehandle (thanks @barubary@infosec.exchange).

v0.1.2    2023-06-08 12:18:04+01:00 Europe/London
  [Enhancements]
  - Use Plack::Util to set file path instead of IO::File::WithPath.

  [Bug Fixes]
  - The file path is resolved to an absolute path before anything is done with it.

  [Documentation]
  - Add note about the lack of logging.

v0.1.1    2023-06-08 09:17:58+01:00 Europe/London
  [Documentation]