@@ -9,6 +9,8 @@ Revision history for {{ $dist->name }}:
 
   - Removed use of Generate::ManifestSkip plugin. It is now maintained manually.
 
+  - Add author's test for Changes.
+
 v0.2.1    2023-06-19 09:40:45+01:00 Europe/London
   [Bug Fixes]
   - Re-added the file existence check that was removed in v0.1.3.
